--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Exploratory Data Analysis (EDA)"
-author: "Capital Bikes Team"
-date: "11/13/2021"
+author: ""
+date: ""
 output: html_document
 ---
 
@@ -30,8 +30,7 @@ options(scipen = 999)
 
 [GitHub](https://github.com/elenabagnera/CapitalBikesProject)
 
-## Setup
-```{r setup, message=FALSE}
+```{r setup, include=FALSE}
 
 library(tidyverse)
 library(httr)
@@ -57,6 +56,8 @@ hour_data_date <- add_date_column(hour_data)
 ```
 
 ## Splitting the data into training and testing
+
+We are performing exploratory data analysis on the training data only.
 
 ```{r split}
 set.seed(28021995)
