--- a/site-discussion.Rmd
+++ b/site-discussion.Rmd
@@ -97,50 +97,16 @@ plot1 + plot2 + plot3
 ``` 
 
 
-*This model* does better than all other models in terms of RMSE.
+As seen from the *graph/table*, Random forests does better than decision tree and LASSO models in terms of RMSE.
 
-*since it is more likely to be the random forest here is a justification to why it is doing better than a decision tree*
-
-*Note to be used if required: Note: A Random Forest regressor may or may not perform better than the Decision Tree in regression (while it usually performs better in classification), because of the delicate overfitting-underfitting tradeoff in the nature of tree-constructing algorithms.*
+Some potential reasons for Random Forests out-performing decision trees and LASSO: 
 
 ## Having a group of decision tree creates “randomness”  and avoids common weaknesses in predictions based on one decision tree like over fitting and excessive correlation between variables. This is because: 
-      1. random forests algorithm uses a subset of features as candidates at each split (does not rely on the same set of features:: de- correlates individual trees) 
-      2. Each tree uses a random sample from the training dataset as it generates the splits which inserts an aspect of randomness and prevents overfitting
+      1. random forests algorithm uses a subset of features as candidates at each split (does not rely on         the same set of features:: de- correlates individual trees) 
+      2. Each tree uses a random sample from the training dataset as it generates the splits which inserts        an aspect of randomness and prevents overfitting
       
-Overall, Random Forests should produce more accurate predictions than one decision tree.
-
-
-##Implementing Best model
-
-Now let's run our model on the full training data to see how it performs
-
-```{r get_data, cache=FALSE, warning=FALSE, message=FALSE}
-
- cbs_data <- read_files('data/')
-data <- sep_departures_from_arrivals(cbs_data) %>%
-  filter(!is.na(station)) # Remove electric bikes not going to / from a station
-
-data <- sep_departures_from_arrivals(cbs_data) %>%
-  filter(!is.na(station))
-
-filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 400)
-
-hour_data <- get_station_hourly(filtered_data) %>%
-  get_historic_weather() %>% 
-  add_sun_is_out() 
-  #filter(conditions != "Bad") # To test if bad weather really hurts RMSE that much
-
-lagged_data <- setup_for_time_prediction(hour_data, station_name = "lincoln_memorial")
-
-model_data <- lagged_data %>%
-  add_predictor_times() %>%
-  filter(!is.na(departures) & !is.na(arrivals)) %>%
-  # Having real time arrival data would be cheating
-  select(-arrivals) %>%
-  format_weather()
-
-```
-
+## Compared to LASSO regression, Random forests decision trees are great for obtaining non-linear relationships between input features and the target variable.  
+It also operates within sample, as opposed to LASSO models which could potentially provide out of sample predictions. In our case, this might be risky because we can not have negative departures, and since departures could go to very high levels in general, we should be careful in analyzing predictions that give very high hourly departure estimation which could be unrealistic. Although we expected LASSO to do a better job in avoiding multicollinearity between our predictors, it is difficult to judge for sure. 
 
 
 ```{r setup_data}
@@ -156,55 +122,88 @@ test <- testing(x = data_split)
 
 ```
 
-```{r fulltraining}
 
-# basically here run the best out of our models but on the train dataset without folds
+##Implementing Best model
 
+Now let's run our model on the full training data to see how it performs
 
+```{r get_data, cache=FALSE, warning=FALSE, message=FALSE}
 
+final_wf <- workflow() %>%
+  add_recipe(recipe) %>%
+  add_model(final_rf) %>%
+  fit(train)
 
-```   
+#  cbs_data <- read_files('data/')
+# data <- sep_departures_from_arrivals(cbs_data) %>%
+#   filter(!is.na(station)) # Remove electric bikes not going to / from a station
+# 
+# data <- sep_departures_from_arrivals(cbs_data) %>%
+#   filter(!is.na(station))
+# 
+# filtered_data <- filter_by_distance(data, from_station = 'lincoln_memorial', distance_m = 400)
+# 
+# hour_data <- get_station_hourly(filtered_data) %>%
+#   get_historic_weather() %>% 
+#   add_sun_is_out() 
+#   #filter(conditions != "Bad") # To test if bad weather really hurts RMSE that much
+# 
+# lagged_data <- setup_for_time_prediction(hour_data, station_name = "lincoln_memorial")
+# 
+# model_data <- lagged_data %>%
+#   add_predictor_times() %>%
+#   filter(!is.na(departures) & !is.na(arrivals)) %>%
+#   # Having real time arrival data would be cheating
+#   select(-arrivals) %>%
+#   format_weather()
+
+```
 
 
 ## Generating predictions on the testing data
-
 Now let's run our final model on the testing data, which we had put to the side
 
 ```{r testing}
 
-predictions <- bind_cols(
-test,
-predict(object = best_fit, new_data = test), 
-) %>%
-  select(departures, starts_with(".pred"))
+p_test <- bind_cols(
+  test,
+  predict(object = final_wf, new_data = test))
 
-predictions %>%
-rmse(departures, .pred) 
+#Out of sample RMSE
+sqrt(mean((p_test$departures - p_test$.pred)^2))
+
+
+# predictions <- bind_cols(
+# test,
+# predict(object = best_fit, new_data = test), 
+# ) %>%
+#   select(departures, starts_with(".pred"))
+# 
+# predictions %>%
+# rmse(departures, .pred) 
 
 ``` 
 
-
 ## Understanding variable importance
-
-
-```{r try}
-
-model_fit %>%
-  pull_workflow_fit() %>%
-  vip(num_features = 10) ## variable importance
-
-```
-
-*this is the result which is expected to have a higher RMSE*
 
 ## What are the most important predictors of hourly departures at the Lincoln Memorial Station?
 
-We expect LASSO do better on this aspect. While random forests will do better in predictions of hourly departures in  the Lincoln Memorial Station *(as evidenced by lower RMSE)*, LASSO will do better in feature/variable selection (identifying which variables predict our outcome best). 
+```{r try}
 
+# model_fit %>%
+#   pull_workflow_fit() %>%
+#   vip(num_features = 10) ## variable importance
+  
+final_rf %>%
+  set_engine("ranger", importance = "permutation") %>%
+  fit(departures ~ .,
+    data = train
+  ) %>%
+  vip(geom = "point")
+```
 
+```
  Our most important predictors are *insert predictors* -- *show a graph here possibly*
-
-*Note to be used if required: Decision Trees are great for obtaining non-linear relationships between input features and the target variable.  However, they pose a major challenge that is that they can’t extrapolate outside unseen data which is something that LASSO models are able to compute. *
 
 ## Ideas for future projects
 
